--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,45 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
-title: Grizzlybit
-email: zubair1024@gmail.com
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: "Back to the Console"
 description: > # this means to ignore newlines until "baseurl:"
- A coder's digest that is trying to be quirky, flawed and an enormous success.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://zubair1024.github.io/" # the base hostname & protocol for your site
-twitter_username: zubair1024
-github_username:  zubair1024
-google_play: 'GDGX'
-google_plus_com: '109485346959707049693'  # Community link
-google_plus_per: '+GDGManagua'  #Personal link
-facebook_app_id: 12345
+  Rants, notes, code snippets and stuff.
+baseurl: ""
+url: "https://shawnteoh.github.io"
+permalink: /:year/:month/:day/:title
+repository: ShawnTeoh/shawnteoh.github.io
+paginate: 5
 
-# Layout settings
-header_type: default  # values [ drawer, default ]
-post_type: highlight    # values [ highlight, default ]
-pagination_type: default  # values [ ops, default ]
-
-more_vert:
-  option1:
-    name: Cool Option 1
-    link: www.myawesomelink.com
-  option2:
-    name: Cool Option 2
-    link: www.myawesomelink.com
-  option3:
-    name: Cool Option 3
-    link: www.myawesomelink.com
-
-disqus: true
-disqus_shortname: 'grizzlybit'
+# MatJek specific configurations
+github_profile: "https://github.com/zubair1024"
+user: "Shawn Teoh"
+contact_url: "https://goo.gl/tVljbV"
+google_tracking_id: "UA-96531316-1"
+google_site_verification: "UA-96531316-1"
+disqus_shortname: "back-to-the-console"
 
 # Build settings
 markdown: kramdown
+plugins:
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+exclude:
+  - Gemfile
+  - Gemfile.lock
+sass:
+  style: compressed
+future: true
