--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ navigation:
   url: /
 - text: About
   url: /about/
-- text: Style Guides
-  url: /style-guide/
+#- text: Style Guides
+#  url: /style-guide/
 - text: Archives
   url: /tags/
 
@@ -39,7 +39,7 @@ disqus:
 
 # Author information - author info at the bottom of the post
 author_name: "Zubair Ahmed"
-author_bio: "Zubair Ahmed is ambitious and passionate engineer who seeks adventures. Likes slapping the keyboard until something good happens."
+author_bio: "Zubair Ahmed is ambitious and passionate engineer who seeks adventures. He likes slapping the keyboard until something good happens."
 author_url:  "http://github.com/zubair1024"
 author_location: "Dubai, United Arab Emirates"
 author_image: /images/Zubair Ahmed.jpg
