--- a/_config.yml
+++ b/_config.yml
@@ -39,10 +39,10 @@ disqus:
 
 # Author information - author info at the bottom of the post
 author_name: "Zubair Ahmed"
-author_bio: "Zubair Ahmed is ambitious and passionate engineer who seeks adventures. He likes slapping the keyboard until something good happens."
-author_url:  "http://github.com/zubair1024"
+author_bio: "Zubair Ahmed is ambitious tweaker who seeks adventures. He likes slapping the keyboard until something good happens."
+author_url:  "http://grizzlybit.info/about/"
 author_location: "Dubai, United Arab Emirates"
-author_image: /images/Zubair Ahmed.jpg
+author_image: /images/Zubair_Ahmed.jpg
 
 # Sidebar Add banner
 banner_url: "http://grizzlybit.info"
