--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,10 @@ linkedin_username: "zubair1024"
 # http://jekyllrb.com/docs/pagination/
 paginate: 5
 paginate_path: '/blog/page:num/'
-plugins: [jekyll-paginate, jekyll-sitemap]
+plugins:
+  - jekyll-paginate
+  - jekyll-feed
+  - jekyll-sitemap
 
 permalink: pretty
 markdown: kramdown
