--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: "Grizzlybit"
 
 # A description of your site for social meta tag, search engines, and feed.xml
-description: "Grizzlybit is a JavaScript programmer's blog about his thoughts, ideas and stories"
+description: "A coder's digest that is trying to be quirky, flawed and an enormous success."
  
 # Tagline near the site title
 tagline: "A coder's digest that is trying to be quirky, flawed and an enormous success."
